# charcoal.rs

./: .gitignore  Cargo.toml  README.md  README.tpl  rustfmt.toml  watch_readme.cmd  watch_readme.sh
.github/workflows/: rust.yml
src/: lib.rs  tree.rs  util.rs
src/binary_tree/: base.rs  impl_traversable.rs  mod.rs  node.rs  node_ref.rs  node_ref_mut.rs  tests.rs
src/freeform_tree/: base.rs  impl_traversable.rs  mod.rs  node.rs  node_ref.rs  node_ref_mut.rs
src/octree/: base.rs  impl_traversable.rs  mod.rs  node.rs  node_ref.rs  node_ref_mut.rs
src/quadtree/: base.rs  impl_traversable.rs  mod.rs  node.rs  node_ref.rs  node_ref_mut.rs
src/storage/: mod.rs  slotmap_impl.rs
src/storage/list/: alloc_impl.rs  arrayvec_impl.rs  mod.rs  smallvec_impl.rs  sparse.rs
src/traversal/: mod.rs
src/traversal/algorithms/: mod.rs  recursive_removal.rs
