[package]
name = "charcoal"
version = "0.1.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kotauskas/charcoal.rs"
documentation = "https://docs.rs/charcoal"

description = "Implements tree data structures and interfaces to work with them."

categories = ["no-std", "data-structures", "algorithms"]
keywords = ["tree", "trees", "arena_tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = {version = "0.5", default_features = false}
smallvec = {version = "1.4", optional = true}
slotmap = {version = "0.4", optional = true}

[features]
default = [
    "std",
    "alloc",

    "binary_tree",
    "octree",
    
    "smallvec",
    "slotmap",
]
std = ["alloc"]
alloc = []

binary_tree = []
octree = []

union_optimizations = []
doc_cfg = []
#linked_list_storage = ["alloc"]

[package.metadata.docs.rs]
features = [
    "std",
    "alloc",

    "binary_tree",
    "octree",

    "smallvec",
    "slotmap",

    "union_optimizations",
    "doc_cfg",
]