[package]
name = "charcoal"
version = "1.1.0"
authors = ["Kotauskas <v.toncharov@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kotauskas/charcoal.rs"
documentation = "https://docs.rs/charcoal"

description = "Implements tree data structures and interfaces to work with them."

categories = ["no-std", "data-structures", "algorithms"]
keywords = ["tree", "trees", "arena_tree"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = { version = "0.5", default_features = false }
granite = { version = "1.0", features = ["arrayvec"] }

[features]
default = [
    "std",
    "unwind_safety",
    "alloc",
    "binary_tree",
    "octree",
    "quadtree",
    "freeform_tree",
]
std = ["alloc"]
unwind_safety = ["std"]
alloc = []

binary_tree = []
octree = []
quadtree = []
freeform_tree = []

smallvec = ["granite/smallvec"]
slab = ["granite/slab"]
slotmap = ["granite/slotmap"]

union_optimizations = ["granite/union_optimizations"]
doc_cfg = []

[package.metadata.docs.rs]
features = [
    "std",
    "unwind_safety",
    "alloc",
    "binary_tree",
    "octree",
    "quadtree",
    "freeform_tree",
    "smallvec",
    "slab",
    "slotmap",
    "union_optimizations",
    "doc_cfg",
]
